link color contrast fixed

--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -27,5 +27,4 @@
 
 a {
     text-decoration: none;
-    color: #399bf0;
 }
